@@ -20,21 +20,17 @@ package org.apache.spark.network.shuffle;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import org.apache.spark.network.util.JavaUtils;
 import org.apache.spark.network.util.MapConfigProvider;
 import org.apache.spark.network.util.TransportConf;
 
@@ -46,15 +42,15 @@ public class CleanupNonShuffleServiceServedFilesSuite {
   private static final String SORT_MANAGER = "org.apache.spark.shuffle.sort.SortShuffleManager";
 
   private static Set<String> expectedShuffleFilesToKeep =
-    ImmutableSet.of("shuffle_782_450_0.index", "shuffle_782_450_0.data");
+    Set.of("shuffle_782_450_0.index", "shuffle_782_450_0.data");
 
   private static Set<String> expectedShuffleAndRddFilesToKeep =
-    ImmutableSet.of("shuffle_782_450_0.index", "shuffle_782_450_0.data", "rdd_12_34");
+    Set.of("shuffle_782_450_0.index", "shuffle_782_450_0.data", "rdd_12_34");
 
   private TransportConf getConf(boolean isFetchRddEnabled) {
     return new TransportConf(
       "shuffle",
-      new MapConfigProvider(ImmutableMap.of(
+      new MapConfigProvider(Map.of(
         Constants.SHUFFLE_SERVICE_FETCH_RDD_ENABLED,
         Boolean.toString(isFetchRddEnabled))));
   }
@@ -71,7 +67,7 @@ public class CleanupNonShuffleServiceServedFilesSuite {
 
   @Test
   public void cleanupOnRemovedExecutorWithoutFilesToKeep() throws IOException {
-    cleanupOnRemovedExecutor(false, getConf(true), Collections.emptySet());
+    cleanupOnRemovedExecutor(false, getConf(true), Set.of());
   }
 
   private void cleanupOnRemovedExecutor(
@@ -128,7 +124,7 @@ public class CleanupNonShuffleServiceServedFilesSuite {
 
   @Test
   public void cleanupOnlyRemovedExecutorWithoutFilesToKeep() throws IOException {
-    cleanupOnlyRemovedExecutor(false, getConf(true) , Collections.emptySet());
+    cleanupOnlyRemovedExecutor(false, getConf(true) , Set.of());
   }
 
   private void cleanupOnlyRemovedExecutor(
@@ -174,7 +170,7 @@ public class CleanupNonShuffleServiceServedFilesSuite {
 
   @Test
   public void cleanupOnlyRegisteredExecutorWithoutFilesToKeep() throws IOException {
-    cleanupOnlyRegisteredExecutor(false, getConf(true), Collections.emptySet());
+    cleanupOnlyRegisteredExecutor(false, getConf(true), Set.of());
   }
 
   private void cleanupOnlyRegisteredExecutor(
@@ -200,28 +196,13 @@ public class CleanupNonShuffleServiceServedFilesSuite {
     }
   }
 
-  private static Set<String> collectFilenames(File[] files) throws IOException {
-    Set<String> result = new HashSet<>();
-    for (File file : files) {
-      if (file.exists()) {
-        try (Stream<Path> walk = Files.walk(file.toPath())) {
-          result.addAll(walk
-            .filter(Files::isRegularFile)
-            .map(x -> x.toFile().getName())
-            .collect(Collectors.toSet()));
-        }
-      }
-    }
-    return result;
-  }
-
   private static void assertContainedFilenames(
       TestShuffleDataContext dataContext,
       Set<String> expectedFilenames) throws IOException {
     Set<String> collectedFilenames = new HashSet<>();
     for (String localDir : dataContext.localDirs) {
-      File[] dirs = new File[] { new File(localDir) };
-      collectedFilenames.addAll(collectFilenames(dirs));
+      JavaUtils.listFiles(new File(localDir)).stream().map(File::getName)
+        .collect(Collectors.toCollection(() -> collectedFilenames));
     }
     assertEquals(expectedFilenames, collectedFilenames);
   }
