@@ -17,7 +17,7 @@
 
 package org.apache.spark.network.shuffle;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 
 import org.apache.spark.network.ssl.SslSampleConfigs;
 import org.apache.spark.network.util.TransportConf;
@@ -30,9 +30,7 @@ public class SslExternalShuffleSecuritySuite extends ExternalShuffleSecuritySuit
       return new TransportConf(
         "shuffle",
         SslSampleConfigs.createDefaultConfigProviderForRpcNamespaceWithAdditionalEntries(
-          ImmutableMap.of(
-          "spark.authenticate.enableSaslEncryption",
-          "true")
+          Map.of("spark.authenticate.enableSaslEncryption", "true")
         )
       );
     } else {
