@@ -27,7 +27,6 @@ import java.math.BigDecimal;
 import scala.collection.Seq;
 import scala.jdk.javaapi.CollectionConverters;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.primitives.Ints;
 import org.junit.jupiter.api.*;
 
@@ -35,6 +34,7 @@ import org.apache.spark.api.java.JavaRDD;
 import org.apache.spark.api.java.JavaSparkContext;
 import org.apache.spark.sql.Column;
 import org.apache.spark.sql.Dataset;
+import org.apache.spark.sql.Encoders;
 import org.apache.spark.sql.Row;
 import org.apache.spark.sql.RowFactory;
 import org.apache.spark.sql.expressions.UserDefinedFunction;
@@ -132,7 +132,7 @@ public class JavaDataFrameSuite {
   public static class Bean implements Serializable {
     private double a = 0.0;
     private Integer[] b = { 0, 1 };
-    private Map<String, int[]> c = ImmutableMap.of("hello", new int[] { 1, 2 });
+    private Map<String, int[]> c = Map.of("hello", new int[] { 1, 2 });
     private List<String> d = Arrays.asList("floppy", "disk");
     private BigInteger e = new BigInteger("1234567");
     private NestedBean f = new NestedBean();
@@ -311,7 +311,7 @@ public class JavaDataFrameSuite {
   @Test
   public void testSampleBy() {
     Dataset<Row> df = spark.range(0, 100, 1, 2).select(col("id").mod(3).as("key"));
-    Dataset<Row> sampled = df.stat().sampleBy("key", ImmutableMap.of(0, 0.1, 1, 0.2), 0L);
+    Dataset<Row> sampled = df.stat().sampleBy("key", Map.of(0, 0.1, 1, 0.2), 0L);
     List<Row> actual = sampled.groupBy("key").count().orderBy("key").collectAsList();
     Assertions.assertEquals(0, actual.get(0).getLong(0));
     Assertions.assertTrue(0 <= actual.get(0).getLong(1) && actual.get(0).getLong(1) <= 8);
@@ -337,7 +337,7 @@ public class JavaDataFrameSuite {
   @Test
   public void testSampleByColumn() {
     Dataset<Row> df = spark.range(0, 100, 1, 2).select(col("id").mod(3).as("key"));
-    Dataset<Row> sampled = df.stat().sampleBy(col("key"), ImmutableMap.of(0, 0.1, 1, 0.2), 0L);
+    Dataset<Row> sampled = df.stat().sampleBy(col("key"), Map.of(0, 0.1, 1, 0.2), 0L);
     List<Row> actual = sampled.groupBy("key").count().orderBy("key").collectAsList();
     Assertions.assertEquals(0, actual.get(0).getLong(0));
     Assertions.assertTrue(0 <= actual.get(0).getLong(1) && actual.get(0).getLong(1) <= 8);
@@ -539,5 +539,31 @@ public class JavaDataFrameSuite {
     String[] expected = spark.table("testData").collectAsList().stream()
       .map(row -> row.get(0).toString() + row.getString(1)).toArray(String[]::new);
     Assertions.assertArrayEquals(expected, result);
+  }
+
+  @Test
+  public void testTransformBase() {
+    // SPARK-49961 - transform must have the correct type
+    Dataset<Integer> ds = spark.createDataset(Arrays.asList(1,2), Encoders.INT());
+    Dataset<Integer> transformed = ds.transform((Dataset<Integer> d) ->
+            ds.selectExpr("(value + 1) value").as(Encoders.INT()));
+    Integer[] expected = {2, 3};
+    Integer[] got = transformed.collectAsList().toArray(new Integer[0]);
+    Arrays.sort(got);
+    Assertions.assertArrayEquals(expected, got);
+  }
+
+  @Test
+  public void testTransformAsClassic() {
+    // SPARK-49961 - transform must have the correct type
+    org.apache.spark.sql.classic.Dataset<Integer> ds =
+            spark.createDataset(Arrays.asList(1,2), Encoders.INT());
+    org.apache.spark.sql.classic.Dataset<Integer> transformed =
+            ds.transform((Dataset<Integer> d) ->
+              ds.selectExpr("(value + 1) value").as(Encoders.INT()));
+    Integer[] expected = {2, 3};
+    Integer[] got = transformed.collectAsList().toArray(new Integer[0]);
+    Arrays.sort(got);
+    Assertions.assertArrayEquals(expected, got);
   }
 }
